# ruwiki-rag

./: Makefile  README.md  pyproject.toml
src/: data_indexing.py  data_retrieval.py  pipeline.py
src/DataIterator/: DataIterator.py  __init__.py
